<resources>
    <string name="app_name">PAM_ListaTODO</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">Ustawienia</string>
    <string name="search">Filter tasks</string>
    <string name="task_title">Task Title</string>
    <string name="EDIT">EDIT</string>
    <string name="back">BACK</string>
    <string name="ADD">ADD</string>
    <string name="due_time">Due time:</string>
    <string name="due_date">Due date:</string>
    <string name="task_category">Task category:</string>
    <string name="task_status">Task status:</string>
    <string name="notifications">Notifications:</string>
    <string name="time_created">Creation Time:</string>
</resources>