<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/task_title"
                android:backgroundTint="@color/light_red"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Task title"
                android:textAlignment="center"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/due_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/due_date"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:editable="false"
                android:backgroundTint="@color/light_red"
                android:focusable="false"
                android:id="@+id/due_date_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/due_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/due_time"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:editable="false"
                android:backgroundTint="@color/light_red"
                android:focusable="false"
                android:id="@+id/due_time_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/task_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/task_category"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/task_category_value"
                android:backgroundTint="@color/light_red"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/categoryValues"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/task_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/task_status"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/task_status_value"
                android:backgroundTint="@color/light_red"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/statusValues"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/task_notifcation_enabled"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/notifications"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/task_notification_enabled_value"
                android:backgroundTint="@color/light_red"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/notificationValues"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/task_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Task description"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/delete_attachment"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center|end"
                    android:layout_marginStart="15dp"
                    app:srcCompat="@drawable/bin" />

                <ImageView
                    android:id="@+id/view_attachment"
                    android:layout_marginTop="10dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center|end"
                    android:layout_marginStart="15dp"
                    app:srcCompat="@drawable/magnifying_glass" />
            </LinearLayout>

            <EditText
                android:id="@+id/task_attachment"
                android:editable="false"
                android:focusable="false"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="TASK ATTACHMENT"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/edit"
        android:layout_marginHorizontal="55dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EDIT" />

    <Button
        android:id="@+id/returnb"
        android:layout_marginHorizontal="55dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />
</LinearLayout>